Small structure validation fixes
